# filmreco

./: .env.example  Dockerfile  Readme  Readme.md  docker-compose.yml  main.py  pyproject.toml  setup_db.py
.github/: CODEOWNERS  dependabot.yml
src/: app.py
src/config/: settings.py
src/data/: sample_films.py
src/database/: vector_store.py
src/models/: schemas.py
src/routes/: recommendations.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  index.html
