[project]
name = "film-reco"
version = "1.0.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "pgvector",
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-postgres",
    "langchain-huggingface",
    "sentence-transformers",
    "transformers",
    # macOS Apple Silicon
    "torch==2.9.0; sys_platform == 'darwin' and platform_machine == 'arm64'",

    # Linux
    "torch==2.9.0+cpu; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"